// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitiesPanel отображается корректно 1`] = `
<div
  class="container fav"
>
  <div>
    <div
      class="container pl-0"
    >
      <div
        class="row"
      >
        <div
          class="col-6 px-0 sh"
        >
          Избранное
        </div>
        <div
          class="col-6 text-right my-auto form-group"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              class="favourite-input input_advance"
              onChange={[Function]}
              placeholder="Добавить новый город"
              required={true}
              type="text"
              value="Sochi"
            />
            <button
              class="btn-circle"
              type="buton"
            >
              +
            </button>
          </form>
          <div
            class="text-center error"
            id="errortext"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <Connect(SavedCity)
      json={
        Object {
          "city": "Moscow",
          "data": undefined,
          "isErrored": true,
        }
      }
      key="1"
    />
    <Connect(SavedCity)
      json={
        Object {
          "city": "Moscow",
          "data": undefined,
          "isErrored": true,
        }
      }
      key="2"
    />
    <div
      className="w-100"
      key="-2"
    />
  </div>
</div>
`;

exports[`отображается корректно 1`] = `
<div
  class="container fav"
>
  <div>
    <div
      class="container pl-0"
    >
      <div
        class="row"
      >
        <div
          class="col-6 px-0 sh"
        >
          Избранное
        </div>
        <div
          class="col-6 text-right my-auto form-group"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              class="favourite-input input_advance"
              onChange={[Function]}
              placeholder="Добавить новый город"
              required={true}
              type="text"
              value="Sochi"
            />
            <button
              class="btn-circle"
              type="buton"
            >
              +
            </button>
          </form>
          <div
            class="text-center error"
            id="errortext"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <Connect(SavedCity)
      json={
        Object {
          "city": "Moscow",
          "data": Object {
            "data": Object {
              "base": "stations",
              "clouds": Object {
                "all": 2,
              },
              "cod": 200,
              "coord": Object {
                "lat": 35,
                "lon": 139,
              },
              "dt": 1560350192,
              "id": 1851632,
              "main": Object {
                "humidity": 92,
                "pressure": 1009,
                "temp": 289.92,
                "temp_max": 290.93,
                "temp_min": 288.71,
              },
              "name": "Shuzenji",
              "sys": Object {
                "country": "JP",
                "id": 2019346,
                "message": 0.0065,
                "sunrise": 1560281377,
                "sunset": 1560333478,
                "type": 3,
              },
              "timezone": 32400,
              "weather": Array [
                Object {
                  "description": "clear sky",
                  "icon": "01n",
                  "id": 800,
                  "main": "Clear",
                },
              ],
              "wind": Object {
                "deg": 107.538,
                "speed": 0.47,
              },
            },
          },
          "isErrored": true,
        }
      }
      key="1"
    />
    <Connect(SavedCity)
      json={
        Object {
          "city": "Moscow",
          "data": Object {
            "data": Object {
              "base": "stations",
              "clouds": Object {
                "all": 2,
              },
              "cod": 200,
              "coord": Object {
                "lat": 35,
                "lon": 139,
              },
              "dt": 1560350192,
              "id": 1851632,
              "main": Object {
                "humidity": 92,
                "pressure": 1009,
                "temp": 289.92,
                "temp_max": 290.93,
                "temp_min": 288.71,
              },
              "name": "Shuzenji",
              "sys": Object {
                "country": "JP",
                "id": 2019346,
                "message": 0.0065,
                "sunrise": 1560281377,
                "sunset": 1560333478,
                "type": 3,
              },
              "timezone": 32400,
              "weather": Array [
                Object {
                  "description": "clear sky",
                  "icon": "01n",
                  "id": 800,
                  "main": "Clear",
                },
              ],
              "wind": Object {
                "deg": 107.538,
                "speed": 0.47,
              },
            },
          },
          "isErrored": true,
        }
      }
      key="2"
    />
    <div
      className="w-100"
      key="-2"
    />
  </div>
</div>
`;
